
Version 1.0b10 -

- syntax coloring parser has been rewritten
- ability to jump to tokens defined in the options block
- fixed a bug when double-clicking a word: selection would be incorrect

Version 1.0b9 - 02/20/07

- removed message to console when trying to create the syntax diagram
- improved ability to cancel the grammar checking operation
- can open now files with extension g, gl, gp and gtp.
- fixed a bug where inline template where incorrectly flagged as "syntax error"
- fixed a bug introduced in b8 that prevented syntax diagram from being displayed when moving the caret in the text pane
- fixed a bug where error reporting was not working properly if generating a grammar after checking it

Version 1.0b8 - 12/04/06

- fixed a bug where package name with dot would fail to be correctly parsed
- fixed a bug where creating a new document would fail
- fixed a bug where checking the grammar would make the current syntax diagram go away
- fixed a bug where checking twice a grammar containing one or more errors would fail to report the errors the second time

Version 1.0b7 - 12/03/06

- handles now the "package" statement found in the @header block (both parser and lexer)
- new idea to convert invalid grammar name
- prefs: auto-indent on colon in rule can be disabled now
- interpreter now correctly identify rules to ignore when using skip() in action
- display the read/write state of each grammar document (disable editing if grammar is read-only)

- fixed the default size of the preferences window that was too small
- fixed various end of line problem on Windows causing syntax coloring and debugger token highlighting to fail
- fixed a bug where the AST/Parse tree contextual menu would not work when the focus was not in the panel
- fixed a bug where generating code for a read-only grammar could result in an infinite loop
- fixed a bug where the window size/position would not be recorded when AW is closed